k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
      role: web
  template:
    metadata:
      labels:
        app: backend
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/backend
        imagePullPolicy: IfNotPresent
        name: backend
        ports:
        - containerPort: 80
