k8s/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
      - name: gitlab-registry
      containers:
      - image: registry.gitlab.com/openculinary/api
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 80
  replicas: 3
  selector:
    matchLabels:
      app: api
