k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-worker-deployment
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
      role: worker
  template:
    metadata:
      labels:
        app: backend
        role: worker
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/backend
        imagePullPolicy: IfNotPresent
        name: backend
        command: ['/srv/.local/bin/pipenv']
        args: ['run', 'celery', '-A', 'reciperadar.workers', 'worker', '-Q', 'celery,crawl_url,crawl_recipe,process_recipe,index_recipe,recrawl_search']
