k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-worker-deployment
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
      role: worker
  template:
    metadata:
      labels:
        app: api
        role: worker
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/api
        imagePullPolicy: IfNotPresent
        name: api
        command: ['pipenv']
        args: ['run', 'celery', 'worker', '-A', 'reciperadar.workers', '-Q', 'celery,recrawl_search,crawl_recipe,process_recipe,index_recipe']
