k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
    role: web
  ports:
    - protocol: TCP
      port: 80
